  [32026] strerror/strsignal TLS not handled correctly for secondary namespaces
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32231] elf: Change ldconfig auxcache magic number
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)

Version 2.39

Major new features:

* A new tunable, glibc.cpu.plt_rewrite, can be used to enable PLT
  rewrite on x86-64.  When enabled with non-lazy binding, the dynamic
  linker will rewrite indirect branches in PLT with direct branches.

* Sync with Linux kernel 6.6 shadow stack interface.  The --enable-cet
  configure option is only supported on x86-64.

* struct statvfs now has an f_type member, equal to the f_type statfs member;
  on the Hurd this was always available under a reserved name,
  and under Linux a spare has been allocated: it was always zero
  in previous versions of glibc, and zero is not a valid result.

* On Linux, the functions posix_spawnattr_getcgroup_np and
  posix_spawnattr_setcgroup_np have been added, along with the
  POSIX_SPAWN_SETCGROUP flag.  They allow posix_spawn and posix_spawnp
  to set the cgroupv2 in the new process in a race-free manner.  These
  functions are GNU extensions and require a kernel with clone3 support.

* On Linux, the pidfd_spawn and pidfd_spawp functions have been added.
  They have a similar prototype and semantic as posix_spawn, but instead of
  returning a process ID, they return a file descriptor that can be used
  along other pidfd functions (like pidfd_send_signal, poll, or waitid).
  The pidfd functionality avoids the issue of PID reuse with the traditional
  posix_spawn interface.

* On Linux, the pidfd_getpid function has been added.  It allows retrieving
  the process ID associated with the process file descriptor created by
  pid_spawn, fork_np, or pidfd_open.
